--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
+:root {
+    --background-color: #000000;
+    --text-color: #ffffff;
+}
 
+body {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    font-family: 'Manrope';font-size: 22px;
+}
