--- a/style.css
+++ b/style.css
@@ -10,22 +10,15 @@ body {
 }
 
 .title {
-    font-weight: bolder;
     text-align: center;
     font-size: 4rem;
+    font-weight: 800;
 
     background: linear-gradient(
         90deg,
-        #ff4d4d,
-        #ffb84d,
-        #ffff4d,
-        #4dff4d,
-        #4dd2ff,
-        #7f4dff,
-        #ff4dd2
+        red, orange, yellow, green, cyan, blue, violet
     );
 
     -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
+    -webkit-text-fill-color: transparent;
 }
