--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body {
         90deg,
         red, orange, yellow, green, cyan, blue, violet
     );
+    background-size: 300% 100%;
+    background-position: center;
 
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
