--- a/style.css
+++ b/style.css
@@ -23,4 +23,12 @@ body {
 
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+
+    animation: rainbow 6s ease infinite;
+}
+
+@keyframes rainbow {
+    0%   { background-position: 0% 50%; }
+    50%  { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
 }
