--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
     background: linear-gradient(
         90deg,
-        white
+        white, green, orange, white
     );
 
     -webkit-background-clip: text;
