--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     --bg-1: #0b0b0f;
     --bg-2: #14141c;
     --text-color: #f5f5f7;
+    --card-border: #1d1d29;
 }
 
 body {
@@ -24,9 +25,14 @@ body {
 
     background: linear-gradient(
         90deg,
-        white, green, orange, white
+        white, rgb(0, 255, 0), orange, white
     );
 
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+
+.color-card {
+    border: 4px solid var(--card-border);
 }
