--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
     background: linear-gradient(
         90deg,
-        white, rgb(0, 255, 0), orange, white
+        rgb(200, 0, 255), rgb(0, 255, 0), orange, white
     );
 
     -webkit-background-clip: text;
