Update Color Card Info CSS

--- a/style.css
+++ b/style.css
@@ -51,5 +51,5 @@ body {
     text-align: center;
     font-size: 1rem;
     font-weight: 600;
-    color: var(--text-color);
+    color: #787878a7;
 }
