--- a/style.css
+++ b/style.css
@@ -47,8 +47,9 @@ body {
 }
 
 .color-info {
-    display: block;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 1rem;
     font-weight: 600;
     color: #787878a7;
