--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
     width: 100%;
 }
 
-.color-info {
+.color-meta {
     display: flex;
     justify-content: center;
     align-items: center;
